<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_276"
    android:padding="@dimen/dp_14"
    android:background="@color/main_blue"
    android:gravity="bottom"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_120"
        android:src="@drawable/app_icon"
        android:contentDescription="@string/header_image"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_sub_title"
        android:textSize="@dimen/sp_14"
        android:textStyle="italic"/>

</LinearLayout>