<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_350"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/custom_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Exit!"
        android:textAllCaps="true"
        android:gravity="center"
        android:textSize="@dimen/sp_25"
        android:padding="@dimen/dp_10"/>
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:layout_gravity="center"
        android:background="@color/main_icons_area_color"
        app:lottie_rawRes="@raw/dialog_exit"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_msg"
            android:textSize="@dimen/sp_18"
            android:gravity="center"
            android:paddingTop="@dimen/dp_10"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingTop="@dimen/dp_0"
            android:padding="@dimen/dp_10">
            <Button
                android:id="@+id/dialog_no_btn"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_45"
                android:layout_marginEnd="@dimen/dp_10"
                android:backgroundTint="@color/main_blue_light_dark"
                android:text="@string/no"
                android:textSize="@dimen/sp_13"/>
            <Button
                android:id="@+id/dialog_yes_btn"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_45"
                android:backgroundTint="@color/main_blue_light_dark"
                android:text="@string/yes"
                android:textSize="@dimen/sp_13"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>