<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_blue"
    tools:context=".Information">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_icons_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_blue"
            tools:context=".MainActivity">

            <RelativeLayout
                android:id="@+id/backInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/shadow"
                android:elevation="@dimen/dp_10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    app:lottie_autoPlay="true"
                    app:lottie_rawRes="@raw/back" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/dp_135"
                android:layout_height="@dimen/dp_135"
                android:layout_marginTop="@dimen/dp_40"
                android:background="@drawable/shadow"
                android:elevation="@dimen/dp_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/app_icon"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/about"
                android:textColor="@color/main_icons_area_color"
                android:textSize="@dimen/sp_35"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_min_6"
                android:text="@string/app_name"
                android:textColor="@color/header_text_color"
                android:textSize="@dimen/sp_25"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_min_4"
                android:layout_marginStart="@dimen/dp_168"
                android:layout_marginEnd="@dimen/dp_168"
                android:text="@string/version"
                android:textColor="#CBFFE714"
                android:textStyle="italic"
                android:textSize="@dimen/sp_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_40"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.473"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <LinearLayout
                    android:layout_width="@dimen/dp_350"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/main_blue_light_10dp_redius"
                    android:elevation="@dimen/dp_10"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="@dimen/dp_30">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="#00000000"
                        app:cardElevation="@dimen/dp_15"
                        app:cardUseCompatPadding="true">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/dp_217"
                            android:layout_height="@dimen/dp_200"
                            android:layout_gravity="center"
                            android:src="@drawable/developer" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="#00FFFFFF"
                        app:cardElevation="@dimen/dp_15"
                        app:cardUseCompatPadding="true">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/main_blue_redius_20_padding_10"
                            android:gravity="center"
                            android:orientation="vertical">

                            <com.airbnb.lottie.LottieAnimationView
                                android:layout_width="@dimen/dp_110"
                                android:layout_height="@dimen/dp_110"
                                app:lottie_autoPlay="true"
                                app:lottie_loop="true"
                                app:lottie_rawRes="@raw/developer" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/developed_by"
                                android:textColor="@color/main_icons_area_color"
                                android:textSize="@dimen/sp_16" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/developer"
                                android:textColor="@color/header_text_color"
                                android:textSize="@dimen/sp_26" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_30"
                    android:text="@string/about_app"
                    android:textAlignment="center"
                    android:textSize="@dimen/sp_18" />

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="@dimen/dp_300"
                    android:layout_height="@dimen/dp_300"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/dp_min_20"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/browsing" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:background="@drawable/main_blue_light_10dp_redius"
                    android:elevation="@dimen/dp_10"
                    android:padding="@dimen/dp_10"
                    android:text="@string/visit_my_website"
                    android:textSize="@dimen/sp_15"
                    android:textColor="@color/def" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>